feat(env): add project shared variables
